[package]
name = "rust-unix-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "find"
path = "src/bin/find.rs"
